// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders with different Colours 1`] = `
Array [
  <span
    className="sc-gZnPbQ jNnRpS"
  >
    Xsmall
  </span>,
  <span
    className="sc-gZnPbQ pbLGt"
    color="goten.100"
  >
    Xsmall
  </span>,
  <span
    className="sc-gZnPbQ hXcdKF"
    color="goten.100"
  >
    Xsmall
  </span>,
]
`;

exports[`Label renders with different Icons 1`] = `
Array [
  <div
    className="flex flex-wrap items-center justify-around gap-2 w-full"
  >
    <span
      className="sc-gZnPbQ ijFljx"
      size="twoxsmall"
    >
      <span
        className="sc-ewBhFl iFEWxm"
        size="twoxsmall"
      >
        <svg
          className="sc-dExYaf"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
    </span>
    <span
      className="sc-gZnPbQ UCaml"
      size="twoxsmall"
    >
      Twoxsmall
      <span
        className="sc-bCrHVQ jVuHkb"
        size="twoxsmall"
      >
        <svg
          className="sc-cfxfcM"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-gZnPbQ kOXLSj"
      size="twoxsmall"
    >
      <span
        className="sc-ewBhFl iFEWxm"
        size="twoxsmall"
      >
        <svg
          className="sc-dExYaf"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
      <span
        className="sc-bCrHVQ jVuHkb"
        size="twoxsmall"
      >
        <svg
          className="sc-cfxfcM"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>,
  <div
    className="flex flex-wrap items-center justify-around gap-2 w-full"
  >
    <span
      className="sc-gZnPbQ eAgREs"
    >
      <span
        className="sc-ewBhFl eDIlrX"
      >
        <svg
          className="sc-dExYaf"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
    </span>
    <span
      className="sc-gZnPbQ hXIkuQ"
    >
      Xsmall
      <span
        className="sc-bCrHVQ isZnGK"
      >
        <svg
          className="sc-cfxfcM"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-gZnPbQ cIbLHK"
    >
      <span
        className="sc-ewBhFl eDIlrX"
      >
        <svg
          className="sc-dExYaf"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
      <span
        className="sc-bCrHVQ isZnGK"
      >
        <svg
          className="sc-cfxfcM"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>,
]
`;

exports[`Label renders with different LetterCases 1`] = `
Array [
  <span
    className="sc-gZnPbQ jNnRpS"
  >
    Default
  </span>,
  <span
    className="sc-gZnPbQ iueRkJ"
  >
    Lowercase
  </span>,
]
`;

exports[`Label renders with different Sizes 1`] = `
Array [
  <span
    className="sc-gZnPbQ gRghHf"
    size="twoxsmall"
  >
    Twoxsmall
  </span>,
  <span
    className="sc-gZnPbQ jNnRpS"
  >
    Xsmall
  </span>,
  <span
    className="sc-gZnPbQ hbEmbu"
    size="twoxsmall"
  >
    Twoxsmall
  </span>,
  <span
    className="sc-gZnPbQ iueRkJ"
  >
    Xsmall
  </span>,
]
`;
